samples/_failures_safe/1761639529_5e213b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_65b1c738.c: In function ‘matrix_mul’:
./samples/SAFE/__tmp_65b1c738.c:111:5: error: expected expression at end of input
  111 |     for (
      |     ^~~
./samples/SAFE/__tmp_65b1c738.c:111:5: error: expected declaration or statement at end of input
